--- a/buildsys.mk.in
+++ b/buildsys.mk.in
@@ -21,7 +21,7 @@
 #  POSSIBILITY OF SUCH DAMAGE.
 #
 
-V=1
+#V=1
 PACKAGE_NAME = @PACKAGE_NAME@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 AS = @AS@
@@ -105,19 +105,13 @@ MO_FILES = ${LOCALES:.po=.mo}
 .SILENT:
 .SUFFIXES:
 .SUFFIXES: .beam .c .c.dep .cc .cc.dep .class .cxx .cxx.dep .d .erl .lib.o .java .mo .m .m.dep .mm .mm.dep .o .plugin.o .po .py .pyc .rc .S .S.dep .xpm
-.PHONY: all subdirs pre-depend depend install install-extra uninstall uninstall-extra clean distclean locales
+.PHONY: all subdirs ${SUBDIRS} pre-depend depend install install-extra uninstall uninstall-extra clean distclean locales
 
-all:
-	${MAKE} ${MFLAGS} subdirs
-	${MAKE} ${MFLAGS} depend
-	${MAKE} ${STATIC_LIB} ${STATIC_LIB_NOINST} ${STATIC_PIC_LIB} ${STATIC_PIC_LIB_NOINST} ${SHARED_LIB} ${SHARED_LIB_NOINST} ${PLUGIN} ${PLUGIN_NOINST} ${PROG} ${PROG_NOINST} ${JARFILE} locales
+all: subdirs depend ${STATIC_LIB} ${STATIC_LIB_NOINST} ${STATIC_PIC_LIB} ${STATIC_PIC_LIB_NOINST} ${SHARED_LIB} ${SHARED_LIB_NOINST} ${PLUGIN} ${PLUGIN_NOINST} ${PROG} ${PROG_NOINST} ${JARFILE} locales
 
-subdirs:
-	for i in ${SUBDIRS}; do \
-		${DIR_ENTER}; \
-		${MAKE} ${MFLAGS} || exit $$?; \
-		${DIR_LEAVE}; \
-	done
+subdirs: ${SUBDIRS}
+${SUBDIRS}:
+	${MAKE} -C $@ ${MFLAGS}
 
 depend: pre-depend ${SRCS}
 	regen=0; \
@@ -349,236 +343,148 @@ locales: ${MO_FILES}
 	COMPILER="${CC}"; \
 	COMPILER_FLAGS="${CFLAGS} ${CPPFLAGS} -c -o $@ $<"; \
 	${COMPILE_STATUS}; \
-	if $${COMPILER} $${COMPILER_FLAGS}; then \
-		${COMPILE_OK}; \
-	else \
-		${COMPILE_FAILED}; \
-	fi
+	$${COMPILER} $${COMPILER_FLAGS}
+
 .c.lib.o:
 	COMPILER="${CC}"; \
 	COMPILER_FLAGS="${LIB_CFLAGS} ${CFLAGS} ${CPPFLAGS} -c -o $@ $<"; \
 	${COMPILE_LIB_STATUS}; \
-	if $${COMPILER} $${COMPILER_FLAGS}; then \
-		${COMPILE_LIB_OK}; \
-	else \
-		${COMPILE_LIB_FAILED}; \
-	fi
+	$${COMPILER} $${COMPILER_FLAGS}
+
 .c.plugin.o:
 	COMPILER="${CC}"; \
 	COMPILER_FLAGS="${PLUGIN_CFLAGS} ${CFLAGS} ${CPPFLAGS} -c -o $@ $<"; \
 	${COMPILE_PLUGIN_STATUS}; \
-	if $${COMPILER} $${COMPILER_FLAGS}; then \
-		${COMPILE_PLUGIN_OK}; \
-	else \
-		${COMPILE_PLUGIN_FAILED}; \
-	fi
+	$${COMPILER} $${COMPILER_FLAGS}
 
 .cc.o .cxx.o:
 	COMPILER="${CXX}"; \
 	COMPILER_FLAGS="${CXXFLAGS} ${CPPFLAGS} -c -o $@ $<"; \
 	${COMPILE_STATUS}; \
-	if $${COMPILER} $${COMPILER_FLAGS}; then \
-		${COMPILE_OK}; \
-	else \
-		${COMPILE_FAILED}; \
-	fi
+	$${COMPILER} $${COMPILER_FLAGS}
+
 .cc.lib.o .cxx.lib.o:
 	COMPILER="${CXX}"; \
 	COMPILER_FLAGS="${LIB_CFLAGS} ${CXXFLAGS} ${CPPFLAGS} -c -o $@ $<"; \
 	${COMPILE_LIB_STATUS}; \
-	if $${COMPILER} $${COMPILER_FLAGS}; then \
-		${COMPILE_LIB_OK}; \
-	else \
-		${COMPILE_LIB_FAILED}; \
-	fi
+	$${COMPILER} $${COMPILER_FLAGS}
+
 .cc.plugin.o .cxx.plugin.o:
 	COMPILER="${CXX}"; \
 	COMPILER_FLAGS="${PLUGIN_CFLAGS} ${CXXFLAGS} ${CPPFLAGS} -c -o $@ $<"; \
 	${COMPILE_PLUGIN_STATUS}; \
-	if $${COMPILER} $${COMPILER_FLAGS}; then \
-		${COMPILE_PLUGIN_OK}; \
-	else \
-		${COMPILE_PLUGIN_FAILED}; \
-	fi
+	$${COMPILER} $${COMPILER_FLAGS}
 
 .d.o:
 	COMPILER="${DC}"; \
 	${COMPILE_STATUS}; \
 	if test x"$(basename ${COMPILER})" = x"dmd"; then \
-		if $${COMPILER} ${DFLAGS} -c -of$@ $<; then \
-			${COMPILE_OK}; \
-		else \
-			${COMPILE_FAILED}; \
-		fi \
+		$${COMPILER} ${DFLAGS} -c -of$@ $<; \
 	else \
-		if $${COMPILER} ${DFLAGS} -c -o $@ $<; then \
-			${COMPILE_OK}; \
-		else \
-			${COMPILE_FAILED}; \
-		fi \
+		$${COMPILER} ${DFLAGS} -c -o $@ $<; \
 	fi
 
 .erl.beam:
 	COMPILER="${ERLC}"; \
 	COMPILER_FLAGS="${ERLCFLAGS} -o $@ $<"; \
 	${COMPILE_STATUS}; \
-	if $${COMPILER} $${COMPILER_FLAGS}; then \
-		${COMPILE_OK}; \
-	else \
-		${COMPILE_FAILED}; \
-	fi
+	$${COMPILER} $${COMPILER_FLAGS}
 
 .java.class:
 	COMPILER="${JAVAC}"; \
 	COMPILER_FLAGS="${JAVACFLAGS} $<"; \
 	${COMPILE_STATUS}; \
-	if $${COMPILER} $${COMPILER_FLAGS} $<; then \
-		${COMPILE_OK}; \
-	else \
-		${COMPILE_FAILED}; \
-	fi
+	$${COMPILER} $${COMPILER_FLAGS}
 
 .m.o:
 	COMPILER="${OBJC}"; \
 	COMPILER_FLAGS="${OBJCFLAGS} ${CPPFLAGS} -c -o $@ $<"; \
 	${COMPILE_STATUS}; \
-	if $${COMPILER} $${COMPILER_FLAGS}; then \
-		${COMPILE_OK}; \
-	else \
-		${COMPILE_FAILED}; \
-	fi
+	$${COMPILER} $${COMPILER_FLAGS}
+
 .m.lib.o:
 	COMPILER="${OBJC}"; \
 	COMPILER_FLAGS="${LIB_CFLAGS} ${OBJCFLAGS} ${CPPFLAGS} -c -o $@ $<"; \
 	${COMPILE_LIB_STATUS}; \
-	if $${COMPILER} $${COMPILER_FLAGS}; then \
-		${COMPILE_LIB_OK}; \
-	else \
-		${COMPILE_LIB_FAILED}; \
-	fi
+	$${COMPILER} $${COMPILER_FLAGS}
+
 .m.plugin.o:
 	COMPILER="${OBJC}"; \
 	COMPILER_FLAGS="${PLUGIN_CFLAGS} ${OBJCFLAGS} ${CPPFLAGS} -c -o $@ $<"; \
 	${COMPILE_PLUGIN_STATUS}; \
-	if $${COMPILER} $${COMPILER_FLAGS}; then \
-		${COMPILE_PLUGIN_OK}; \
-	else \
-		${COMPILE_PLUGIN_FAILED}; \
-	fi
+	$${COMPILER} $${COMPILER_FLAGS}
 
 .mm.o:
 	COMPILER="${OBJCXX}"; \
 	COMPILER_FLAGS="${OBJCXXFLAGS} ${OBJCFLAGS} ${CXXFLAGS} ${CPPFLAGS} -c -o $@ $<"; \
 	${COMPILE_STATUS}; \
-	if $${COMPILER} $${COMPILER_FLAGS}; then \
-		${COMPILE_OK}; \
-	else \
-		${COMPILE_FAILED}; \
-	fi
+	$${COMPILER} $${COMPILER_FLAGS}
+
 .mm.lib.o:
 	COMPILER="${OBJCXX}"; \
 	COMPILER_FLAGS="${LIB_CFLAGS} ${OBJCXXFLAGS} ${OBJCFLAGS} ${CXXFLAGS} ${CPPFLAGS} -c -o $@ $<"; \
 	${COMPILE_LIB_STATUS}; \
-	if $${COMPILER} $${COMPILER_FLAGS}; then \
-		${COMPILE_LIB_OK}; \
-	else \
-		${COMPILE_LIB_FAILED}; \
-	fi
+	$${COMPILER} $${COMPILER_FLAGS}
+
 .mm.plugin.o:
 	COMPILER="${OBJCXX}"; \
 	COMPILER_FLAGS="${PLUGIN_CFLAGS} ${OBJCXXFLAGS} ${OBJCFLAGS} ${CXXFLAGS} ${CPPFLAGS} -c -o $@ $<"; \
 	${COMPILE_PLUGIN_STATUS}; \
-	if $${COMPILER} $${COMPILER_FLAGS}; then \
-		${COMPILE_PLUGIN_OK}; \
-	else \
-		${COMPILE_PLUGIN_FAILED}; \
-	fi
+	$${COMPILER} $${COMPILER_FLAGS}
 
 .po.mo:
 	COMPILER="${MSGFMT}"; \
 	COMPILER_FLAGS="-c -o $@ $<"; \
 	${COMPILE_RESOURCE_STATUS}; \
-	if $${COMPILER} $${COMPILER_FLAGS}; then \
-		${COMPILE_RESOURCE_OK}; \
-	else \
-		${COMPILE_RESOURCE_FAILED}; \
-	fi
+	$${COMPILER} $${COMPILER_FLAGS}
 
 .py.pyc:
 	COMPILER="${PYTHON}"; \
 	COMPILER_FLAGS="${PYTHON_FLAGS}"; \
 	${COMPILE_RESOURCE_STATUS}; \
-	if $${COMPILER} $${COMPILER_FLAGS} -c "import py_compile; py_compile.compile('$<')"; then \
-		${COMPILE_RESOURCE_OK}; \
-	else \
-		${COMPILE_RESOURCE_FAILED}; \
-	fi
+	$${COMPILER} $${COMPILER_FLAGS} -c "import py_compile; py_compile.compile('$<')"
 
 .rc.o .rc.lib.o .rc.plugin.o:
 	COMPILER="${WINDRES}"; \
 	COMPILER_FLAGS="${CPPFLAGS} -J rc -O coff -o $@ $<"; \
 	${COMPILE_RESOURCE_STATUS}; \
-	if $${COMPILER} $${COMPILER_FLAGS}; then \
-		${COMPILE_RESOURCE_OK}; \
-	else \
-		${COMPILE_RESOURCE_FAILED}; \
-	fi
+	$${COMPILER} $${COMPILER_FLAGS}
 
 .S.o:
 	COMPILER="${AS}"; \
 	COMPILER_FLAGS="${ASFLAGS} ${CPPFLAGS} -c -o $@ $<"; \
 	${COMPILE_STATUS}; \
-	if $${COMPILER} $${COMPILER_FLAGS}; then \
-		${COMPILE_OK}; \
-	else \
-		${COMPILE_FAILED}; \
-	fi
+	$${COMPILER} $${COMPILER_FLAGS}
+
 .S.lib.o:
 	COMPILER="${AS}"; \
 	COMPILER_FLAGS="${LIB_CFLAGS} ${ASFLAGS} ${CPPFLAGS} -c -o $@ $<"; \
 	${COMPILE_LIB_STATUS}; \
-	if $${COMPILER} $${COMPILER_FLAGS}; then \
-		${COMPILE_LIB_OK}; \
-	else \
-		${COMPILE_LIB_FAILED}; \
-	fi
+	$${COMPILER} $${COMPILER_FLAGS}
+
 .S.plugin.o:
 	COMPILER="${AS}"; \
 	COMPILER_FLAGS="${PLUGIN_CFLAGS} ${ASFLAGS} ${CPPFLAGS} -c -o $@ $<"; \
 	${COMPILE_PLUGIN_STATUS}; \
-	if $${COMPILER} $${COMPILER_FLAGS}; then \
-		${COMPILE_PLUGIN_OK}; \
-	else \
-		${COMPILE_PLUGIN_FAILED}; \
-	fi
+	$${COMPILER} $${COMPILER_FLAGS}
 
 .xpm.o:
 	COMPILER="${CC}"; \
 	COMPILER_FLAGS="${CFLAGS} ${CPPFLAGS} -x c -c -o $@ $<"; \
 	${COMPILE_STATUS}; \
-	if $${COMPILER} $${COMPILER_FLAGS}; then \
-		${COMPILE_OK}; \
-	else \
-		${COMPILE_FAILED}; \
-	fi
+	$${COMPILER} $${COMPILER_FLAGS}
+
 .xpm.lib.o:
 	COMPILER="${CC}"; \
 	COMPILER_FLAGS="${LIB_CFLAGS} ${CFLAGS} ${CPPFLAGS} -x c -c -o $@ $<"; \
 	${COMPILE_LIB_STATUS}; \
-	if $${COMPILER} $${COMPILER_FLAGS}; then \
-		${COMPILE_LIB_OK}; \
-	else \
-		${COMPILE_LIB_FAILED}; \
-	fi
+	$${COMPILER} $${COMPILER_FLAGS}
+
 .xpm.plugin.o:
 	COMPILER="${CC}"; \
 	COMPILER_FLAGS="${PLUGIN_CFLAGS} ${CFLAGS} ${CPPFLAGS} -x c -c -o $@ $<"; \
 	${COMPILE_PLUGIN_STATUS}; \
-	if $${COMPILER} $${COMPILER_FLAGS}; then \
-		${COMPILE_PLUGIN_OK}; \
-	else \
-		${COMPILE_PLUGIN_FAILED}; \
-	fi
+	$${COMPILER} $${COMPILER_FLAGS}
 
 install: ${SHARED_LIB} ${STATIC_LIB} ${STATIC_PIC_LIB} ${PLUGIN} ${PROG} install-extra
 	for i in ${SUBDIRS}; do \
@@ -790,31 +696,31 @@ distclean: clean
 
 ifndef V
 
-DIR_ENTER = printf "@TERM_EL@@TERM_SETAF6@Entering directory @TERM_BOLD@$$i@TERM_SGR0@@TERM_SETAF6@.@TERM_SGR0@\n"; cd $$i || exit $$?
-DIR_LEAVE = printf "@TERM_EL@@TERM_SETAF6@Leaving directory @TERM_BOLD@$$i@TERM_SGR0@@TERM_SETAF6@.@TERM_SGR0@\n"; cd .. || exit $$?
-DEPEND_STATUS = printf "@TERM_EL@@TERM_SETAF3@Generating dependencies...@TERM_SGR0@\r"
-DEPEND_OK = printf "@TERM_EL@@TERM_SETAF2@Successfully generated dependencies.@TERM_SGR0@\n"
-DEPEND_FAILED = err=$$?; printf "@TERM_EL@@TERM_SETAF1@Failed to generate dependencies!@TERM_SGR0@\n"; exit $$err
-COMPILE_STATUS = printf "@TERM_EL@@TERM_SETAF3@Compiling @TERM_BOLD@$<@TERM_SGR0@@TERM_SETAF3@...@TERM_SGR0@\r"
-COMPILE_OK = printf "@TERM_EL@@TERM_SETAF2@Successfully compiled @TERM_BOLD@$<@TERM_SGR0@@TERM_SETAF2@.@TERM_SGR0@\n"
-COMPILE_FAILED = err=$$?; printf "@TERM_EL@@TERM_SETAF1@Failed to compile @TERM_BOLD@$<@TERM_SGR0@@TERM_SETAF1@!@TERM_SGR0@\n"; exit $$err
-COMPILE_LIB_STATUS = printf "@TERM_EL@@TERM_SETAF3@Compiling @TERM_BOLD@$<@TERM_SGR0@@TERM_SETAF3@ (lib)...@TERM_SGR0@\r"
-COMPILE_LIB_OK = printf "@TERM_EL@@TERM_SETAF2@Successfully compiled @TERM_BOLD@$<@TERM_SGR0@@TERM_SETAF2@ (lib).@TERM_SGR0@\n"
-COMPILE_LIB_FAILED = err=$$?; printf "@TERM_EL@@TERM_SETAF1@Failed to compile @TERM_BOLD@$<@TERM_SGR0@@TERM_SETAF1@ (lib)!@TERM_SGR0@\n"; exit $$err
-COMPILE_PLUGIN_STATUS = printf "@TERM_EL@@TERM_SETAF3@Compiling @TERM_BOLD@$<@TERM_SGR0@@TERM_SETAF3@ (plugin)...@TERM_SGR0@\r"
-COMPILE_PLUGIN_OK = printf "@TERM_EL@@TERM_SETAF2@Successfully compiled @TERM_BOLD@$<@TERM_SGR0@@TERM_SETAF2@ (plugin).@TERM_SGR0@\n"
-COMPILE_PLUGIN_FAILED = err=$$?; printf "@TERM_EL@@TERM_SETAF1@Failed to compile @TERM_BOLD@$<@TERM_SGR0@@TERM_SETAF1@ (plugin)!@TERM_SGR0@\n"; exit $$err
-COMPILE_RESOURCE_STATUS = printf "@TERM_EL@@TERM_SETAF3@Compiling @TERM_BOLD@$<@TERM_SGR0@@TERM_SETAF3@ (resource)...@TERM_SGR0@\r"
-COMPILE_RESOURCE_OK = printf "@TERM_EL@@TERM_SETAF2@Successfully compiled @TERM_BOLD@$<@TERM_SGR0@@TERM_SETAF2@ (resource).@TERM_SGR0@\n"
-COMPILE_RESOURCE_FAILED = err=$$?; printf "@TERM_EL@@TERM_SETAF1@Failed to compile @TERM_BOLD@$<@TERM_SGR0@@TERM_SETAF1@ (resource)!@TERM_SGR0@\n"; exit $$err
-LINK_STATUS = printf "@TERM_EL@@TERM_SETAF3@Linking @TERM_BOLD@$@@TERM_SGR0@@TERM_SETAF3@...@TERM_SGR0@\r"
-LINK_OK = printf "@TERM_EL@@TERM_SETAF2@Successfully linked @TERM_BOLD@$@@TERM_SGR0@@TERM_SETAF2@.@TERM_SGR0@\n"
-LINK_FAILED = err=$$?; printf "@TERM_EL@@TERM_SETAF1@Failed to link @TERM_BOLD@$@@TERM_SGR0@@TERM_SETAF1@!@TERM_SGR0@\n"; exit $$err
-INSTALL_STATUS = printf "@TERM_EL@@TERM_SETAF3@Installing @TERM_BOLD@$$i@TERM_SGR0@@TERM_SETAF3@...@TERM_SGR0@\r"
-INSTALL_OK = printf "@TERM_EL@@TERM_SETAF2@Successfully installed @TERM_BOLD@$$i@TERM_SGR0@@TERM_SETAF2@.@TERM_SGR0@\n"
-INSTALL_FAILED = err=$$?; printf "@TERM_EL@@TERM_SETAF1@Failed to install @TERM_BOLD@$$i@TERM_SGR0@@TERM_SETAF1@!@TERM_SGR0@\n"; exit $$err
-DELETE_OK = printf "@TERM_EL@@TERM_SETAF4@Deleted @TERM_BOLD@$$i@TERM_SGR0@@TERM_SETAF4@.@TERM_SGR0@\n"
-DELETE_FAILED = err=$$?; printf "@TERM_EL@@TERM_SETAF1@Failed to delete @TERM_BOLD@$$i@TERM_SGR0@@TERM_SETAF1@!@TERM_SGR0@\n"; exit $$err
+DIR_ENTER = cd $$i || exit $$?
+DIR_LEAVE = cd .. || exit $$?
+DEPEND_STATUS = true
+DEPEND_OK = true
+DEPEND_FAILED = exit $$?
+COMPILE_STATUS = printf "CompileExe: $@\n"
+COMPILE_OK = true
+COMPILE_FAILED = exit $$?
+COMPILE_LIB_STATUS = printf "CompileLib: $@\n"
+COMPILE_LIB_OK = true
+COMPILE_LIB_FAILED = exit $$?
+COMPILE_PLUGIN_STATUS = printf "CompilePlugin: $@\n"
+COMPILE_PLUGIN_OK = true
+COMPILE_PLUGIN_FAILED = exit $$?
+COMPILE_RESOURCE_STATUS = printf "CompileResource: $@\n"
+COMPILE_RESOURCE_OK = true
+COMPILE_RESOURCE_FAILED = exit $$?
+LINK_STATUS = printf "Link: $@\n"
+LINK_OK = true
+LINK_FAILED = exit $$?
+INSTALL_STATUS = printf "Install: $$i\n"
+INSTALL_OK = true
+INSTALL_FAILED = exit $$?
+DELETE_OK = printf "Delete: $$i\n"
+DELETE_FAILED = exit $$?
 
 else
 
