dns: rename files to remove redundant dns_ prefix.

--- a/src/libmowgli/dns/Makefile
+++ b/src/libmowgli/dns/Makefile
@@ -4,13 +4,13 @@ STATIC_PIC_LIB_NOINST = ${LIBMOWGLI_SHARED_DNS}
 STATIC_LIB_NOINST = ${LIBMOWGLI_STATIC_DNS}
 
 SRCS = dns.c			\
-       dns_evloop_res.c		\
-       dns_evloop_reslib.c	\
-       dns_evloop_reslist_win32.c
+       evloop_res.c		\
+       evloop_reslib.c	\
+       evloop_reslist_win32.c
 
 INCLUDES = dns.h		\
-           dns_evloop_res.h	\
-           dns_evloop_reslib.h
+           evloop_res.h	\
+           evloop_reslib.h
 
 include ../../../buildsys.mk
 
