--- a/src/examples/Makefile
+++ b/src/examples/Makefile
@@ -1,2 +1,2 @@
-SUBDIRS = echoserver vio-udplistener async_resolver formattertest helpertest libevent-bench linetest listsort memslice-bench patriciatest patriciatest2 randomtest timertest
+SUBDIRS = echoserver vio-udplistener async_resolver formattertest helpertest jsontest libevent-bench linetest listsort memslice-bench patriciatest patriciatest2 randomtest timertest
 include ../../buildsys.mk
