--- a/src/libmowgli/Makefile
+++ b/src/libmowgli/Makefile
@@ -6,7 +6,7 @@ LIB_MINOR = 0
 SHARED_LIB = ${LIBMOWGLI_SHARED_LIB}
 STATIC_LIB = ${LIBMOWGLI_STATIC_LIB}
 
-SUBDIRS = ${LIBMOWGLI_MODULES} platform
+SUBDIRS = ${LIBMOWGLI_MODULES}
 
 INCLUDES = mowgli.h
 
