By request of mogri, spaces after cast

--- a/uncrustify.cfg
+++ b/uncrustify.cfg
@@ -437,7 +437,7 @@ sp_after_operator                        = force   # ignore/add/remove/force
 sp_after_operator_sym                    = remove   # ignore/add/remove/force
 
 # Add or remove space after C/D cast, i.e. 'cast(int)a' vs 'cast(int) a' or '(int)a' vs '(int) a'
-sp_after_cast                            = remove   # ignore/add/remove/force
+sp_after_cast                            = force   # ignore/add/remove/force
 
 # Add or remove spaces inside cast parens
 sp_inside_paren_cast                     = remove   # ignore/add/remove/force
