Enable ./autogen.sh to update config.guess and config.sub.
To do this, it has a small automake project in autogen-automake-trap
and uses automake --add-missing --copy --force to get the updated files.
Then it copies them to the main source directory which uses
AC_CANONICAL_HOST and AC_CANONICAL_TARGET but does not use automake.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 aclocal.m4
+autogen-automake-trap/Makefile
+autogen-automake-trap/configure
+autogen-automake-trap/config.*
+autogen-automake-trap/m4
+autogen-automake-trap/missing
+autogen-automake-trap/*.in
 autom4te.cache
 buildsys.mk
 src/libmowgli/platform/autoconf.h
