--- a/buildsys.mk.in
+++ b/buildsys.mk.in
@@ -741,7 +741,7 @@ COMPILE_PLUGIN_FAILED = exit $$?
 COMPILE_RESOURCE_STATUS = printf "CompileResource: $$COMPILER $${COMPILER_FLAGS}\n"
 COMPILE_RESOURCE_OK = true
 COMPILE_RESOURCE_FAILED = exit $$?
-LINK_STATUS = printf "Link: ${LD} $@ $$LDOBJS ${LDFLAGS} ${LIBS}\n"
+LINK_STATUS = printf "Link: ${LD} -o $@ $$LDOBJS ${LDFLAGS} ${LIBS}\n"
 LINK_OK = true
 LINK_FAILED = exit $$?
 INSTALL_STATUS = printf "Install: $$i\n"
