All Header Files: Use consistently-named & commented inclusion guards
This names the include guards after the file path and comments the
endif at the bottom of the files too. It also instructs autoconf to
generate inclusion guards for the autoconf.h file that it writes out.

This avoids the include guards being named with reserved identifiers.
Identifiers that start with 2 underscores, or 1 underscore and then a
capital letter, should only be declared by system headers.

--- a/configure.ac
+++ b/configure.ac
@@ -7,6 +7,15 @@ AC_CONFIG_SRCDIR([src])
 AC_CONFIG_HEADER([src/libmowgli/platform/autoconf.h])
 AC_CONFIG_MACRO_DIR([m4])
 
+AH_TOP([
+#ifndef MOWGLI_SRC_LIBMOWGLI_PLATFORM_AUTOCONF_H_INCLUDE_GUARD
+#define MOWGLI_SRC_LIBMOWGLI_PLATFORM_AUTOCONF_H_INCLUDE_GUARD 1
+])
+
+AH_BOTTOM([
+#endif /* !MOWGLI_SRC_LIBMOWGLI_PLATFORM_AUTOCONF_H_INCLUDE_GUARD */
+])
+
 AC_CANONICAL_HOST
 AC_CANONICAL_TARGET
 
