Build System & core/heap: add method to disable heap allocator
The heap allocator was found to be hiding a use-after-free error
in an unrelated program (not Atheme IRC Services).

Add a configure option to make mowgli.heap just wrap around
mowgli.alloc directly. This allows hardened memory allocators to
be plugged into the latter, which affect all individual object
allocations made by the former.

The disabled implementation also features more debug logging.

--- a/src/libmowgli/platform/autoconf.h.in
+++ b/src/libmowgli/platform/autoconf.h.in
@@ -5,6 +5,9 @@
 #define MOWGLI_SRC_LIBMOWGLI_PLATFORM_AUTOCONF_H_INCLUDE_GUARD 1
 
 
+/* Disable the heap allocator */
+#undef DISABLE_HEAP_ALLOCATOR
+
 /* Define to 1 if you have the `dispatch_block' function. */
 #undef HAVE_DISPATCH_BLOCK
 
